import mathjax to display math

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,3 +38,6 @@
 {% if page.mermaid %} 
   {% include mermaid.html %} 
 {% endif %}
+{% if page.math %} 
+  {% include mathjax.html %} 
+{% endif %}
